# play-dataspec

./: .gitignore  README.md  pyproject.toml
src/specs/: validation.py
